Docs: Update 1장.md

--- a/1주차/문성준/1장.md
+++ b/1주차/문성준/1장.md
@@ -93,3 +93,19 @@
 - 스프링 컨테이너는 빈을 생성하고 관계 설정 및 생명주기를 관리하여 IoC를 실현한다.
 ## 주요 개념 정리
 <img width="697" alt="image" src="https://github.com/user-attachments/assets/e51a7539-0cf8-4383-90d8-e373ad689ba3" />
+
+
+# 질문
+## 1. 결합도를 낮추는 다양한 방법이 있을까?
+- 상속을 지양하는 것 외에도 인터페이스를 적극 활용하거나, DI(Dependency Injection)를 효과적으로 활용하는 방법이 있을까?
+- 구체적인 예제 코드와 함께, 스프링에서 결합도를 낮추는 실제적인 전략은 무엇이 있을까 ?
+## 2. IoC의 구현 방식에는 어떤 것들이 있을까?
+- IoC는 **DI(Dependency Injection)**의 개념과 밀접하게 연결되어 있는데, IoC를 구현하는 방식으로 생성자 주입, 필드 주입, 세터 주입이 있다.
+- 각각의 장단점과 실무에서 가장 선호되는 방법이 무엇이 있을까 ?
+## 3. 스프링 컨테이너의 종류에는 어떤 것들이 있을까?
+- ApplicationContext 외에도 다양한 스프링 컨테이너(예: WebApplicationContext, AnnotationConfigApplicationContext)가 있는데, 각각의 역할과 차이를 더 생각하며, 정리해본다면? 
+## 4. 스프링의 다양한 디자인 패턴을 좀 더 살펴볼까?
+- 현재 팩토리 패턴과 전략 패턴을 언급했는데, 스프링에서 사용하는 프록시 패턴, 데코레이터 패턴, 옵저버 패턴 등의 추가적인 패턴도 포함하면 좋을 것 같은데 어떻게 생각 하시는지 ?
+## 5. JPA를 사용하는 경우 DAO 개념이 완전히 사라지는가?
+- JPA가 DAO의 역할을 대신한다고 하지만, JPA를 사용하더라도 Repository 계층이 필요한 이유를 명확하게 말한다면 ?
+- Spring Data JPA의 내부 동작 방식과, 기존 DAO 패턴과의 차이점을 비교한다면 ?
